# tortoise-tax

./: README.md  cabal.project  flake.nix  tortoise-tax.cabal
doc/: ideas.md
src/: Example.hs  TortoiseTax.hs
src/Interview/: CLI.hs
src/TaxCode/: Example.hs
tortoise-tax/: CHANGELOG.md  LICENSE  tortoise-tax.cabal
tortoise-tax-cli/: CHANGELOG.md  tortoise-tax-cli.cabal
tortoise-tax-cli/app/: Main.hs
tortoise-tax/src/: TortoiseTax.hs
tortoise-tax/src/TaxCode/: Example.hs
