cabal-version:      2.4

name:               tortoise-tax

version:            0.1.0.0

synopsis:

-- description:

homepage:           https://github.com/charlieshanley/tortoise-tax

-- bug-reports:

license:            MIT

license-file:       LICENSE

author:             Charles Hanley

maintainer:         charlie.s.hanley@gmail.com

-- copyright:

-- category:

extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    -- other-extensions:
    exposed-modules:  TortoiseTax, Example
    -- other-modules:
    build-depends:      base ^>=4.14.1.0
                      , text

test-suite tortoise-tax-test
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    type:             exitcode-stdio-1.0
    build-depends:    base ^>=4.14.1.0
